--- a/react-player/src/styles/_song.scss
+++ b/react-player/src/styles/_song.scss
@@ -1,9 +1,18 @@
 .song-container {
   min-height: 60vh;
-  background: lightblue;
   display: flex;
   flex-direction: column;
   // by using display flex and flex-direction we now have access to align item so:
   align-items: center;
   justify-content: center;
+  img {
+    width: 20%;
+    border-radius: 50%;
+  }
+  h2 {
+    padding: 3rem 1rem 1rem 1rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
 }
