library toggle and css fixes

--- a/react-player/src/styles/_library.scss
+++ b/react-player/src/styles/_library.scss
@@ -1,12 +1,16 @@
 .library {
   position: fixed;
+  box-shadow: 2px 2px 50px rgb(212, 212, 212);
   top: 0;
   left: 0;
   width: 20rem;
   height: 100%;
-  //   background-color: lightblue;
-  box-shadow: 2px 2px 50px rgb(212, 212, 212);
+  background: white;
   overflow: scroll;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  opacity: 0;
+
   h2 {
     padding: 2rem;
   }
@@ -15,9 +19,10 @@
 .library-song {
   display: flex;
   align-items: center;
-  //   flex-direction: column;
   padding: 1rem 2rem 1rem 2rem;
   cursor: pointer;
+  transition: all 0.75s ease-out;
+
   img {
     width: 30%;
   }
@@ -56,3 +61,14 @@
 .selected {
   background: paleturquoise;
 }
+
+.active-library {
+  transform: translateX(0%);
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .library {
+    width: 100%;
+  }
+} ;
