--- a/react-player/src/styles/_player.scss
+++ b/react-player/src/styles/_player.scss
@@ -38,6 +38,11 @@ input[type="range"]::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
 }
+input[type="range"]::-moz-slider-thumb {
+  -webkit-appearance: none;
+  background: transparent;
+  border: none;
+}
 
 .track {
   background: lightblue;
